--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,7 +24,7 @@
     "@vue/cli-service": "~5.0.8",
     "@vue/compiler-sfc": "^3.3.4",
     "eslint": "^8.57.1",
-    "eslint-plugin-vue": "^9.32.0"
+    "eslint-plugin-vue": "^9.32.0",
 "tailwindcss": "^3.4.1",
     "postcss": "^8.4.35",
     "autoprefixer": "^10.4.17"
